# Notes-API

./: pyproject.toml
src/: app.py
src/api/: bootstrap.py
src/api/common/: types.py
src/api/middlewares/: authenticate.py
src/api/routes/: auth.py  notes.py
src/core/database/: init_db.py
src/core/database/models/: Note.py  Token.py  User.py
src/database/: init_db.py
src/database/models/: Note.py  User.py
src/networkLayer/: bootstrap.py
src/networkLayer/middlewares/: authenticate.py
src/networkLayer/routes/: auth.py
src/services/password/: PasswordService.py
src/services/sentiment/: SentimentService.py
src/services/tokens/: TokenRepository.py  TokenRepositoryInterface.py
src/services/tokens/common/: tokenTypes.py
