[tool.poetry]
name = "notesapi"
version = "0.1.0"
description = ""
authors = ["RoieGolst <roiegol9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
pymongo = "^4.8.0"
jsonschema = "^4.23.0"
beanie = "^1.26.0"
motor = "^3.5.1"
pyjwt = "^2.8.0"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

